# EdgeBenchmarks

./: .gitignore  NOTICE  README.md
hough-transform/: Cargo.toml  Dockerfile  client.py  locustfile.py  spin.toml
hough-transform/src/: hough_transform.rs  lib.rs  main.rs
polybench-c-4.2/: Dockerfile  config.mk
polybench-c-4.2/datamining/correlation/: Dockerfile  Makefile
polybench-c-4.2/datamining/covariance/: Dockerfile  Makefile
polybench-c-4.2/linear-algebra/blas/gemm/: Dockerfile  Makefile
polybench-c-4.2/linear-algebra/blas/gemver/: Dockerfile  Makefile
polybench-c-4.2/linear-algebra/blas/gesummv/: Dockerfile  Makefile
polybench-c-4.2/linear-algebra/blas/symm/: Dockerfile  Makefile
polybench-c-4.2/linear-algebra/blas/syr2k/: Dockerfile  Makefile
polybench-c-4.2/medley/deriche/: Dockerfile  Makefile
polybench-c-4.2/medley/floyd-warshall/: Dockerfile  Makefile
polybench-c-4.2/medley/nussinov/: Dockerfile  Makefile
polybench-c-4.2/stencils/adi/: Dockerfile  Makefile
polybench-c-4.2/stencils/fdtd-2d/: Dockerfile  Makefile
polybench-c-4.2/stencils/heat-3d/: Dockerfile  Makefile
polybench-c-4.2/stencils/jacobi-1d/: Dockerfile  Makefile
polybench-c-4.2/stencils/jacobi-2d/: Dockerfile  Makefile
polybench-c-4.2/stencils/seidel-2d/: Dockerfile  Makefile
polybench-c-4.2/utilities-python/: clean.py  dockerfile-gen.py  makefile-gen.py  move-binaries.py  run-all.py  time_benchmark.py
spectrogram-generator/: Cargo.toml  Dockerfile  client.py  spin.toml
spectrogram-generator/src/: lib.rs  main.rs  spectrogram.rs
(+28 files in other folders)
